<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_expense_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddExpenseActivity">

    <EditText
        android:id="@+id/additionalNotesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/AdditonalNotesText"
        android:inputType="textPersonName"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/addNotes"
        app:layout_constraintTop_toBottomOf="@+id/descriptionText" />

    <TextView
        android:id="@+id/addNotes"
        android:layout_width="119dp"
        android:layout_height="45dp"
        android:layout_marginTop="6dp"
        android:text="@string/AdditonalNotesText"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/descriptionLabel"
        tools:layout_editor_absoluteX="10dp" />

    <EditText
        android:id="@+id/expenseCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/Price"
        android:inputType="numberDecimal"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/expenseNameText" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:text="@string/Price"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/descriptionLabel"
        android:layout_width="111dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:text="@string/DescriptionText"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/DateLabel"
        tools:layout_editor_absoluteX="9dp" />

    <TextView
        android:id="@+id/DateLabel"
        android:layout_width="96dp"
        android:layout_height="51dp"
        android:layout_marginTop="4dp"
        android:text="@string/DateLabel"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:layout_editor_absoluteX="9dp" />

    <EditText
        android:id="@+id/descriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/DescriptionText"
        android:inputType="textPersonName"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/descriptionLabel"
        app:layout_constraintTop_toBottomOf="@+id/dateText" />

    <EditText
        android:id="@+id/expenseCategoryText"
        android:layout_width="199dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/ExpenseCategoryText"
        android:inputType="textPersonName"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/businessNameText" />

    <EditText
        android:id="@+id/businessNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/BusinessName"
        android:inputType="textPersonName"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/expenseLoactionText" />

    <EditText
        android:id="@+id/expenseNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:autoText="false"
        android:ems="10"
        android:hint="@string/ExpenseNameText"
        android:inputType="textPersonName"
        android:textSize="20dp"
        app:circularflow_angles="Name"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="148dp"
        android:layout_height="39dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="44dp"
        android:text="@string/BusinessName"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/expenseLoactionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/ExpenseLocationText"
        android:inputType="textPersonName"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/expenseCost" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="173dp"
        android:layout_height="42dp"
        android:layout_marginTop="24dp"
        android:text="@string/ExpenseCategoryText"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/ExpenseLocationText"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:layout_editor_absoluteX="4dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="96dp"
        android:text="@string/ExpenseNameText"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="116dp"
        android:text="@string/AddExpenseText"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addExpenseButton"
        android:layout_width="390dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:text="@string/AddExpenseButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/additionalNotesText"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/dateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/DateText"
        android:inputType="none"
        app:layout_constraintStart_toEndOf="@+id/DateLabel"
        app:layout_constraintTop_toBottomOf="@+id/expenseCategoryText" />

</androidx.constraintlayout.widget.ConstraintLayout>